# lem_in

./: .Makefile.swp  .nfs.20051048.8aff  CMakeLists.txt  Makefile  compile.sh  lem_in  pseudo.c  test.txt
includes/: .lem_in.h.swp  lem_in.h
libft/: .ft_strcmp.c.swp  .libft.h.swp  Makefile  ft_atoi.c  ft_atoi2.c  ft_bzero.c  ft_debug.c  ft_free_arr.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memmove2.c  ft_memset.c  ft_putendl_fd.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strjoin3.c  ft_strlcat.c  ft_strmapi.c  ft_strncmp.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  get_next_line.c  libft.h
maps/: map0  map1  map2  map4  map5  map8  map9  notes
src/: .fill_start.c.swp  .get_links.c.swp  .get_map.c.swp  .main.c.swp  .save_input.c.swp  .travel.c.swp  display.c  fill_start.c  free_stuff.c  get_map.c  main.c  name_ants.c  save_input.c  travel.c  travel_functions.c
