cmake_minimum_required(VERSION 3.6)
project(lem_in)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    includes/lem_in.h
    libft/ft_atoi.c
    libft/ft_atoi2.c
    libft/ft_bzero.c
    libft/ft_debug.c
    libft/ft_free_arr.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isdigit.c
    libft/ft_isprint.c
    libft/ft_itoa.c
    libft/ft_memalloc.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memdel.c
    libft/ft_memmove.c
    libft/ft_memmove2.c
    libft/ft_memset.c
    libft/ft_putchar.c
    libft/ft_putchar_fd.c
    libft/ft_putendl.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr.c
    libft/ft_putstr_fd.c
    libft/ft_strcat.c
    libft/ft_strchr.c
    libft/ft_strclr.c
    libft/ft_strcmp.c
    libft/ft_strcpy.c
    libft/ft_strdel.c
    libft/ft_strdup.c
    libft/ft_strequ.c
    libft/ft_striter.c
    libft/ft_striteri.c
    libft/ft_strjoin.c
    libft/ft_strjoin3.c
    libft/ft_strlcat.c
    libft/ft_strlen.c
    libft/ft_strmap.c
    libft/ft_strmapi.c
    libft/ft_strncat.c
    libft/ft_strncmp.c
    libft/ft_strncpy.c
    libft/ft_strnequ.c
    libft/ft_strnew.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strsplit.c
    libft/ft_strstr.c
    libft/ft_strsub.c
    libft/ft_strtrim.c
    libft/ft_tolower.c
    libft/ft_toupper.c
    libft/get_next_line.c
    libft/libft.h
    src/fill_start.c
    src/get_map.c
    src/main.c
    src/name_ants.c
    src/save_input.c
    src/travel.c
    src/travel_functions.c
    pseudo.c)

add_executable(lem_in ${SOURCE_FILES})